crates/ktask-tui/tests/snapshots/snapshots__logs_loading.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
3 Logs
structured · level ≥ debug · phase - · search - · 2/2 following
  10:30:10 INF   t1   - task queued: Add the parser
> 10:30:20 INF   t1   - preflight started



















Press ? for the key map
