crates/ktask-tui/tests/snapshots/snapshots__queue_empty.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
1 Queue
No tasks queued.





















Press ? for the key map
