crates/ktask-tui/tests/snapshots/snapshots__queue_populated.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
1 Queue
  ID   STATE             PROTOCOL   PHASE           ATTEMPTS
> 1    Done              tdd        -               1
  2    Running           tdd        Green           2
  3    Queued                       -               0
















p pause  i interrupt  r retry  c cancel  Enter inspect  R resume  A ack  x rerun
a attach  d diff
Press ? for the key map
