crates/ktask-tui/tests/snapshots/snapshots__task-inspector_empty.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
5 Task inspector
No task to inspect.





















Press ? for the key map
