crates/ktask-tui/tests/snapshots/snapshots__task-inspector_loading.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
5 Task inspector
 Task 1 · Add the parser
 Queued · - · 0 attempts
Outcome    (the task's definition is not loaded)
Protocol   unknown: no phases known
           no phase entered yet
Gates      · format · lint · build · verify · privacy
Attempts   none yet
           No attempts yet.













[ / ] attempt  j / k task  g / G first / last
Press ? for the key map
